test_suite/alan-2022-examples/failing/007950_mutation.alan
source F55 begin while 938 do source YUPWa begin relax end end end
